--- a/.env.dist
+++ b/.env.dist
@@ -7,7 +7,7 @@ POSTGRES_DB=db
 POSTGRES_USER=random
 POSTGRES_PASSWORD=random
 POSTGRES_NAME=database
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_NAME}:5432/${POSTGRES_DB}?serverVersion=${POSTGRES_VERSION}&charset=utf8
+DATABASE_URL=host=${POSTGRES_NAME} user=${POSTGRES_USER} password=${POSTGRES_PASSWORD} dbname=${POSTGRES_DB} port=5432 sslmode=disable TimeZone=UTC
 ###< doctrine/doctrine-bundle ###
 
 JWT_SECRET=
